grammar.js
        source_file: $ => seq(
            field('docstring', optional($.string)), 
            repeat($.use), 
            repeat($.entity)),
        cap: $ => choice('iso', 'trn', 'ref', 'val', 'box', 'tag'),
        nominal_type: $ => prec.right(seq(
            field('name', sep1('.', $.identifier)),
            optional(field('typeargs', $.typeargs)),
            optional(field('cap', choice($.cap, $.gencap))),
            optional(field('modifier', choice($.ephemeral, $.aliased)))
        )),
        union_type: $ => sep2('|', $._inner_type),
        isect_type: $ => sep2('&', $._inner_type),
        tuple_type: $ => sep2(',', $._inner_type),
        lambda_type: $ => seq(
            choice('{', '@{'),
            optional($.cap),
            optional(field('name', $.identifier)),
            optional(field('typeparams', $.typeparams)),
            alias(choice($.lparen, $.lparen_new), '('),
            optional(field('argument_types', commaSep1($.type))),
            ')',
            optional(seq(':', field('return_type', $.type))),
            optional($.partial),
            '}',
            optional(choice($.cap, $.gencap)),
            optional(choice($.ephemeral, $.aliased))
        ),
        // ponyc rule: type
        _inner_type: $ => seq(
            choice(
                $["this"], 
                $.cap, 
                $.nominal_type, 
                $._grouped_type, 
                $.lambda_type
            ),
            optional(field('viewpoint', seq('->', $._inner_type)))
        ),
        type: $ => $._inner_type,

        // expr AS type - a partial cast
        consume: $ => prec(
            PREC.consume,
            seq('consume', optional($.cap), $._term)
        ),
        // jumps
        "return": $ =>              prec.left(seq('return', optional($.block))),
        "break": $ =>               prec.left(seq('break', optional($.block))),
        "continue": $ =>            prec.left(seq('continue', optional($.block))),
        "error": $ =>               prec.left(seq('error', optional($.block))),
        "compile_intrinsic": $ =>   prec.left(seq('compile_intrinsic', optional($.block))),
        "compile_error": $ =>       prec.left(seq('compile_error', optional($.block))),
        _jump: $ => choice(
            $["return"],
            $["break"],
            $["continue"],
            $.error,
            $.compile_intrinsic,
            $.compile_error
        ),
        _block_exprs: $ => seq(
              $._block_expr,
              repeat(
                  choice(
                      seq(';', $._block_expr),
                      $._block_expr_new
                  )
              )
          ),
        block: $ => choice(
            $._block_exprs,
            seq($._block_exprs, $._jump),
            $._jump
        ),
        field_access: $ => prec(PREC.field, seq(
            field('base', $._term),
            '.',
            field('field', $.identifier)
        )),
        call: $ => prec(PREC.call, seq(
            field('callee', $._term),
            field('arguments', $["arguments"]),
            optional($.partial)
        )),
        term_with_typeargs: $ => prec(PREC.typeargs, seq(
            field('base', $._term),
            $.typeargs
        )),
        bool: $ => choice(
            'true',
            'false'
        ),
        array: $ => prec(PREC.array, seq(
            alias(choice($.lsquare, $.lsquare_new), '['),
            seq(
                optional(
                    seq(
                        'as',
                        $.type,
                        ':'
                    )
                ),
                optional(prec.left($.block))
            ),
            ']'
        )),
        // differs from param in that the type is optional
        lambdaparam: $ => seq(
            field('name', $.identifier),
            optional(
                seq(
                    ':',
                    field('type', $.type)
                )
            ),
            optional(
                seq(
                    '=',
                    field('default', $._term)
                )
            )
        ),
        "this": $ => 'this',
        _lambdacommon: $ => seq(
            optional($.annotations),
            optional(field('receiver_cap', $.cap)),
            optional(field('name', $.identifier)),
            optional(field('typeparams', $.typeparams)),
            alias(choice($.lparen, $.lparen_new), '('),
            optional(field('params', commaSep1($.lambdaparam))), 
            ')',
            optional(field('captures', $._lambdacaptures)),
            optional(seq(':', field('return_type', $.type))),
            optional($.partial),
            '=>',
            field('body', $.block),
            '}',
            optional(field('refcap', $.cap))
        ),
        lambda: $ => seq(
            '{', 
            $._lambdacommon
        ),
        _term: $ => prec(PREC.term, choice(
            $.unary_op,
            $.identifier, // reference
            $["this"],
            $._literal,
            $.array,
            $.object,
            $.lambda,
            $.barelambda,
            $.ffi_call,
            $["location"],
            $["if"],
            $.ifdef,
            $.iftype,
            $.match,
            $["while"],
            $["repeat"],
            $["for"],
            $.with,
            $.try_block,
            $.recover,
            $.consume,
            //$._pattern,
            $.local,
            $.binop,
            $.asop,
            $.field_access,
            $.partial_application,
            $.chain,
            $.call,
            $.tuple,
            $.grouped,
            $.term_with_typeargs
            // TODO: const_expr (not yet supported in ponyc)
        )),
        unary_op: $ => prec(PREC.unary_op,
            seq(
                field('operator', choice('not', '-', '-~', 'addressof', 'digestof')),
                field('operand', $._term)
            )
        ),
        // ponyc rule: ref
        identifier: $ => token(seq(/[a-zA-Z_]/, repeat(/[a-zA-Z0-9_']/))),
        param: $ => choice(
            '...', 
            seq(
                field('name', $.identifier), 
                ':', 
                field('type', $.type), 
                optional(seq('=', field('default', $._term)))
            )
        ),
        params: $ => commaSep1($.param),
        // TODO
        positional_args: $ => commaSep1($.block),
        typeparam: $ => seq(
            field('name', $.identifier),
            optional(field('constraint', seq(':', $.type))),
            optional(field('default', seq('=', $.type)))
        ),
        typeparams: $ => seq(
            alias(choice($.lsquare, $.lsquare_new), '['),
            commaSep1($.typeparam), 
            ']'
        ),
        typeargs: $ => seq(alias($.lsquare, '['), commaSep1($.type), ']'), // TODO: const and literal typeargs
        partial: $ => '?',
        _use_name: $ => seq(field('name', $.identifier), '='),
        use: $ => seq(
                'use',
                optional(field('name', $._use_name)),
                field('specifier', choice($.string, $.use_ffi)),
                optional(seq('if', field('condition', $._term)))
        ),
        field: $ => seq(
            choice('var', 'let', 'embed'),
            field('name', $.identifier),
            seq(
                ':',
                field('type', $.type)
            ),
            optional(seq('=', field('default', $._term))),
            optional(field('docstring', $.string))
        ),
        method: $ => seq(
            'fun',
            $._method_common
        ),
        _method_common: $ => seq(
            optional($.annotations),
            optional(
                choice(
                    field('receiver_cap', $.cap),
                    '@'
                )
            ),
            field('name', $.identifier),
            optional(field('typeparams', $.typeparams)),
            alias(choice($.lparen, $.lparen_new), '('),
            optional(field('params', $.params)), 
            ')',
            optional(seq(':', field('return_type', $.type))),
            optional($.partial),
            // docstring for functions without body
            optional(field('docstring', $.string)),
            optional(seq('=>', field('body', $.block)))
        ),
        fields: $ => repeat1($.field),
        methods: $ => repeat1(choice($.constructor, $.method, $.behavior)),
        entity_type: $ => choice('type', 'interface', 'trait', 'primitive', 'struct', 'class', 'actor'),
        // can't be empty so we have all combinations of fields and methods here
        entity: $ => seq(
            field('entity_type', $.entity_type),
            optional($.annotations),
            optional(token('@')),
            optional(field('default_cap', $.cap)),
            field('name', $.identifier),
            optional(field('typeparams', $.typeparams)),
            optional(seq('is', field('provides', $.type))),
            optional(field('docstring', $.string)),
            optional(field('members', $.members))
        )
    }
});

function commaSep(rule) {
  return optional(commaSep1(rule))
}

function commaSep1(rule) {
  return sep1(',', rule)
}

function sep1(delimiter, rule) {
  return seq(rule, repeat(seq(delimiter, rule)))
}
function sep2(delimiter, rule) {
  return seq(rule, repeat1(seq(delimiter, rule)))
}
